Fixed My overflowing issue

--- a/Style/style.css
+++ b/Style/style.css
@@ -17,6 +17,8 @@ a{
   border: none !important;
   padding: 0 !important;
   border-radius: 10%;
+  left: 0px;
+  overflow: hidden;
 }
 
 .modal-body{
@@ -85,6 +87,7 @@ svg {
   font-size: 1.5em;
   text-align: center;
   color: white;
+  /*position: relative;*/
   box-sizing: border-box;  
 }
 
@@ -118,6 +121,7 @@ svg {
     /*Morris special sauce*/
     position: relative;
     z-index: 0;
+    /*left: 0px;*/
 }
 
 .modal .block1, .block2, .block3, .block4, .block5{
